tests/netedit/demandElements/waypoint/basic/invalid_parent/routes.netedit
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-02-28 14:52:08 by Eclipse SUMO netedit Version v1_12_0+0925-5aa1278f164
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <route id="route_0" edges="gneE0 gneE1" color="yellow">
        <stop lane="gneE0_0" startPos="7.00" endPos="17.00" duration="60.00"/>
    </route>
</routes>
